# email-classifier

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
cuda/: CudaTimer.cu  CudaTimer.cuh  GPUInfo.cu  GPUInfo.cuh  NaiveBayesGPU.cu  NaiveBayesGPU.cuh
data-structures/: CSRMatrix.hpp  ClassificationLabels.hpp
training-dataset/: csv-split-merge.py
utils/: CsvFileHandler.cpp  CsvFileHandler.hpp  EvaluationMetrics.cpp  EvaluationMetrics.hpp  NaiveBayesCPU.cpp  NaiveBayesCPU.hpp  TextProcessor.cpp  TextProcessor.hpp  Timer.cpp  Timer.hpp
